--- a/mid_project/config.toml
+++ b/mid_project/config.toml
@@ -1,7 +1,7 @@
 [theme]
 
 # Primary accent for interactive elements
-primaryColor = '#7792E3'
+primaryColor = 'purple'
 
 # Background color for the main content area
 backgroundColor = '#273346'
